# prebuilder.py

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  MANIFEST.in  Manifesto.md  ReadMe.md  pyproject.toml  setup.cfg
prebuilder/: __init__.py  __main__.py  buildPipeline.py  globalPrefs.py  repoPipeline.py  styles.py
prebuilder/actions/: __init__.py
prebuilder/core/: Action.py  BuildSystem.py  BuiltPackage.py  Distro.py  Fetcher.py  FilesTracker.py  NamingPolicy.py  Package.py  PackageManager.py  Person.py  Repo.py  RunConfig.py  Tearer.py  __init__.py  enums.py
prebuilder/distros/: __init__.py
prebuilder/distros/aosp/: __init__.py
prebuilder/distros/arch/: __init__.py
prebuilder/distros/debian/: AptDpkg.py  BuiltPackage.py  Repo.py  __init__.py  copyrust.py  releases.py  utils.py
prebuilder/distros/rpm_based/: __init__.py
prebuilder/extractors/: ELF.py  __init__.py
prebuilder/importers/: cpack.py  debhelper.py  rpmSpec.py
prebuilder/namingPolicies/: __init__.py
prebuilder/packageManagers/: __init__.py
prebuilder/systems/: __init__.py  autotools.py  cmake.py  dummy.py  make.py  meson.py  ninja.py  premake.py
prebuilder/tearers/: FHSTearer.py
prebuilder/tools/: 7z.py  __init__.py  alien.py  determinism.py  dpkgDeb.py  dpkgSig.py  fakeroot.py  help2man.py  ldconfig.py  make.py  ninja.py  patches.py  pkgconfig.py  reprepro.py
prebuilder/utils/: ReprMixin.py  VPath.py  WithEnv.py
tests/: tests.py
