[metadata]
name = prebuilder
#version = 0.1
author = KOLANICH
url = https://github.com/prebuilder/prebuilder.py
description = A framework for writing binary packages build pipelines in python instead of bash
long_description = file: ReadMe.md
keywords = python, building, CI, bleeding edge, 
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
include_package_data = True
setup_requires = setuptools_scm @ git+https://github.com/pypa/setuptools_scm.git
install_requires = 
	# KOLANICH's libs, Unlicense license
	AnyVer @ git+https://github.com/prebuilder/AnyVer.py.git
	TargetTriple @ git+https://github.com/prebuilder/TargetTriple.py.git
	ClassDictMeta @ git+https://github.com/prebuilder/ClassDictMeta.py.git
	FHS @ git+https://github.com/prebuilder/FHS.py.git
	fsutilz @ git+https://github.com/prebuilder/fsutilz.py.git
	fuckapt @ git+https://github.com/prebuilder/fuckapt.py

	File2Package @ git+https://github.com/File2Package.py/File2Package.py.git
	File2Package.backend.dpkg @ git+https://github.com/File2Package.py/File2Package.backend.dpkg

	pantarei @ git+https://github.com/KOLANICH-libs/pantarei.py.git
	RichConsole[colorama] @ git+https://github.com/KOLANICH-libs/RichConsole.git

	# 3rd-party libs
	sh @ git+https://github.com/amoffat/sh.git # MIT
	pyelftools @ git+https://github.com/eliben/pyelftools.git # Unlicense
	GitPython @ git+https://github.com/gitpython-developers/GitPython.git # BSD-3-Clause
	#PGPy @ git+https://github.com/SecurityInnovation/PGPy # BSD-3-Clause
	#pathvalidate @ git+https://github.com/thombashi/pathvalidate.git # MIT
	patch_ng @ git+https://github.com/conan-io/python-patch-ng

#tests_requires = pyfakefs @ git+https://github.com/jmcgeheeiv/pyfakefs.git # Apache-2.0

[options.extras_require]
CMake = CMake @ git+https://github.com/KOLANICH/CMake.py.git # Unlicense
meson = mesonbuild @ https://github.com/mesonbuild/meson # Apache-2.0
importers.rpm = python-rpm-spec @ https://github.com/bkircher/python-rpm-spec # MIT
pkgconfig = pykg-config @ https://github.com/gbiggs/pykg-config

[options.packages.find]
include =
	prebuilder
	prebuilder.*

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
